Доработан класс SearchSteps и добавил исключения